--- a/GRE.html
+++ b/GRE.html
@@ -619,54 +619,59 @@
         });
         const GREtestimonials = [
         {
-    content: "I owe my GRE success to Neemtree. Their personalized coaching and expert guidance helped me achieve a score beyond my expectations. I couldn't have done it without them!",
-    name: "Person Name 1",
-    role: "Role 1"
+    content: `"I owe my GRE success to Neemtree. Their personalized coaching and expert guidance helped me achieve a score beyond my expectations. I couldn't have done it without them!"`,
+    name: "Lucas Nguyen",
+    role: "GRE Score:320"
   },
   {
-    content: "Neemtree's GRE test series was invaluable. It simulated the real exam perfectly, and their team's constant support and encouragement made a huge difference in my preparation.",
-    name: "Person Name 2",
-    role: "Role 2"
+    content: `"Neemtree's GRE test series was invaluable. It simulated the real exam perfectly, and their team's constant support and encouragement made a huge difference in my preparation."`,
+    name: "Caleb Reynolds",
+    role: "GRE Score:310"
   },
   {
-    content: "The Neemtree team not only assisted me with GRE prep but also guided me through the entire application process. They made my study abroad dream a reality!",
-    name: "Person Name 3",
-    role: "Role 3"
+    content: `"The Neemtree team not only assisted me with GRE prep but also guided me through the entire application process. They made my study abroad dream a reality!"`,
+    name: "Ava Thompson",
+    role: "GRE Score:300"
   },
   {
-    content: "Neemtree's test-taking strategies and tips were game-changers. They equipped me with the tools I needed to tackle the GRE confidently and excel.",
-    name: "Person Name 4",
-    role: "Role 4"
+    content:` "Neemtree's test-taking strategies and tips were game-changers. They equipped me with the tools I needed to tackle the GRE confidently and excel."`,
+    name: "Alejandro Ramirez",
+    role:"GRE Score:330"
   },
   {
-    content: "Applying for a student visa can be daunting, but Neemtree's visa assistance made it seamless. Their expertise ensured that I had all the right documents, making the process stress-free.",
-    name: "Person Name 5",
-    role: "Role 5"
+    content: `"Applying for a student visa can be daunting, but Neemtree's visa assistance made it seamless. Their expertise ensured that I had all the right documents, making the process stress-free."`,
+    name: "Jasmine Patel",
+    role: "GRE Score:320"
   },
   {
-    content: "Neemtree is the ultimate destination for GRE preparation and study abroad guidance. I'm incredibly grateful for their support in my journey to a prestigious international university.",
-    name: "John Thompson",
-    role: "Role 5"
+    content: `"Neemtree is the ultimate destination for GRE preparation and study abroad guidance. I'm incredibly grateful for their support in my journey to a prestigious international university."`,
+    name: "Sophia Martinez",
+    role: "GRE Score:335"
   },
   {
-    content: "Neemtree Consultancy played a pivotal role in my GRE success. Their personalized coaching and expert guidance transformed my weaknesses into strengths. I am now confidently on my way to my dream graduate school, and I couldn't have done it without their unwavering support. - Sarah W.",
-    name: "Role 5"
+    content: `"Neemtree Consultancy played a pivotal role in my GRE success. Their personalized coaching and expert guidance transformed my weaknesses into strengths. I am now confidently on my way to my dream graduate school, and I couldn't have done it without their unwavering support."`,
+    name: "Jordan Carter",
+    role: "GRE Score:340"
   },
   {
-    content: "Neemtree Consultancy's GRE preparation resources are unparalleled. The mock tests and study materials provided an accurate simulation of the actual exam. The consultancy's support didn't stop there; they guided me seamlessly through the application process, making my dream of studying abroad a reality. - Rajesh S.",
-    name: "Role 5"
+    content: `"Neemtree Consultancy's GRE preparation resources are unparalleled. The mock tests and study materials provided an accurate simulation of the actual exam. The consultancy's support didn't stop there; they guided me seamlessly through the application process, making my dream of studying abroad a reality."`,
+    name: "Palla Harshit",
+    role: "GRE Score:325"
   },
   {
-    content: "Choosing Neemtree Consultancy was the best decision I made for my GRE preparations. Their dedicated tutors tailored their teaching to my needs, ensuring my success. The application process was smooth, thanks to their efficient guidance. Neemtree truly cares about students' aspirations and helps turn them into achievements. - Emily L.",
-    name: "Role 5"
+    content: `"Choosing Neemtree Consultancy was the best decision I made for my GRE preparations. Their dedicated tutors tailored their teaching to my needs, ensuring my success. The application process was smooth, thanks to their efficient guidance. Neemtree truly cares about students' aspirations and helps turn them into achievements."`,
+    name: "Harper Sullivan",
+    role: "GRE Score:315"
   },
   {
-    content: "I can't thank Neemtree Consultancy enough for their unwavering support during my GRE journey. Their comprehensive test series and insightful strategies elevated my confidence. The consultancy's assistance with applications and visa procedures streamlined what can be a daunting process. I am now pursuing my graduate studies, all thanks to their expertise. - Ankit D.",
-    name: "Role 5"
+    content: `"I can't thank Neemtree Consultancy enough for their unwavering support during my GRE journey. Their comprehensive test series and insightful strategies elevated my confidence. The consultancy's assistance with applications and visa procedures streamlined what can be a daunting process. I am now pursuing my graduate studies, all thanks to their expertise."`,
+    name: "Elijah Morgan",
+    role: "GRE Score:335"
   },
   {
-    content: "Neemtree Consultancy stands out for its exceptional GRE coaching and application assistance. The tutors provided individual attention, focusing on my weak areas, significantly improving my scores. Their application and visa support team made the entire process stress-free. Neemtree turned a complex process into a smooth journey, and I am grateful for their expertise. - Priya M.",
-    name: "Role 5"
+    content: `"Neemtree Consultancy stands out for its exceptional GRE coaching and application assistance. The tutors provided individual attention, focusing on my weak areas, significantly improving my scores. Their application and visa support team made the entire process stress-free. Neemtree turned a complex process into a smooth journey, and I am grateful for their expertise."`,
+    name: "Lily Chen",
+    role: "GRE Score:305"
   },
 ];
 
