--- a/IELTS.html
+++ b/IELTS.html
@@ -641,54 +641,54 @@ document.addEventListener('DOMContentLoaded', function () {
 });
 const IELTStestimonials = [
   {
-    content: "I owe a big thanks to Neemtree for their incredible IELTS support. Their expert guidance, personalized study plans, and access to high-quality study materials made all the difference. I achieved the IELTS score I needed for my dream university, and Neemtree played a vital role in that achievement. They truly care about their students' success, and I highly recommend their services.",
-    name: "Person Name 1",
-    role: "Role 1"
+    content: `"I owe a big thanks to Neemtree for their incredible IELTS support. Their expert guidance, personalized study plans, and access to high-quality study materials made all the difference. I achieved the IELTS score I needed for my dream university, and Neemtree played a vital role in that achievement. They truly care about their students' success, and I highly recommend their services."`,
+    name: "Naree Thitima",
+    role: "Overall Band Score: 8.0"
   },
   {
-    content: "Neemtree made my IELTS preparation a smooth and effective experience. Their experienced tutors and comprehensive practice tests helped me build confidence in my English language skills. I couldn't have asked for better support in my journey to study abroad. Thanks to Neemtree, I'm now on my way to pursuing my education overseas.",
-    name: "Person Name 2",
-    role: "Role 2"
+    content: `"Neemtree made my IELTS preparation a smooth and effective experience. Their experienced tutors and comprehensive practice tests helped me build confidence in my English language skills. I couldn't have asked for better support in my journey to study abroad. Thanks to Neemtree, I'm now on my way to pursuing my education overseas."`,
+    name: "Panit Suwat",
+    role: "Overall Band Score: 8.5"
   },
   {
-    content: "Neemtree's guidance and resources were instrumental in my IELTS success. Their personalized study plans, expert tutors, and realistic mock tests prepared me thoroughly for the actual exam. Neemtree's commitment to my success gave me the confidence I needed to excel. I can't thank them enough for their support.",
-    name: "Person Name 3",
-    role: "Role 3"
+    content: `"Neemtree's guidance and resources were instrumental in my IELTS success. Their personalized study plans, expert tutors, and realistic mock tests prepared me thoroughly for the actual exam. Neemtree's commitment to my success gave me the confidence I needed to excel. I can't thank them enough for their support."`,
+    name: "Siri Wannisa",
+    role: "Overall Band Score: 7.5"
   },
   {
-    content: "I am thrilled with the results I achieved in the IELTS, thanks to Neemtree. Their structured study plans, experienced tutors, and constant support were invaluable. Neemtree's personalized approach and commitment to their students set them apart. I wholeheartedly recommend their services to anyone aiming to study abroad.",
-    name: "Person Name 4",
-    role: "Role 4"
+    content: `"I am thrilled with the results I achieved in the IELTS, thanks to Neemtree. Their structured study plans, experienced tutors, and constant support were invaluable. Neemtree's personalized approach and commitment to their students set them apart. I wholeheartedly recommend their services to anyone aiming to study abroad."`,
+    name: "Emily Davis",
+    role: "Overall Band Score: 9.0"
   },
   {
-    content: "Neemtree made my IELTS preparation a breeze. Their well-organized study materials and expert guidance helped me attain the scores necessary for my study abroad goals. Neemtree's dedication to student success shines through, and I couldn't be happier with the support they provided.",
-    name: "Person Name 5",
-    role: "Role 5"
+    content: `"Neemtree made my IELTS preparation a breeze. Their well-organized study materials and expert guidance helped me attain the scores necessary for my study abroad goals. Neemtree's dedication to student success shines through, and I couldn't be happier with the support they provided."`,
+    name: "Brandon Miller",
+    role: "Overall Band Score: 8.0"
   },
   {
-    content: "I owe a big thanks to Neemtree for their incredible IELTS support. Their expert guidance, personalized study plans, and access to high-quality study materials made all the difference. I achieved the IELTS score I needed for my dream university, and Neemtree played a vital role in that achievement. They truly care about their students' success, and I highly recommend their services.",
-    name: "Person Name 6",
-    role: "Role 6"
+    content: `"I owe a big thanks to Neemtree for their incredible IELTS support. Their expert guidance, personalized study plans, and access to high-quality study materials made all the difference. I achieved the IELTS score I needed for my dream university, and Neemtree played a vital role in that achievement. They truly care about their students' success, and I highly recommend their services."`,
+    name: "Priya Sharma",
+    role: "Overall Band Score: 7.5"
   },
   {
-    content: "Neemtree made my IELTS preparation a smooth and effective experience. Their experienced tutors and comprehensive practice tests helped me build confidence in my English language skills. I couldn't have asked for better support in my journey to study abroad. Thanks to Neemtree, I'm now on my way to pursuing my education overseas.",
-    name: "Person Name 7",
-    role: "Role 7"
+    content: `"Neemtree made my IELTS preparation a smooth and effective experience. Their experienced tutors and comprehensive practice tests helped me build confidence in my English language skills. I couldn't have asked for better support in my journey to study abroad. Thanks to Neemtree, I'm now on my way to pursuing my education overseas."`,
+    name: "Arjun Patel",
+    role: "Overall Band Score: 9.0"
   },
   {
-    content: "Neemtree's guidance and resources were instrumental in my IELTS success. Their personalized study plans, expert tutors, and realistic mock tests prepared me thoroughly for the actual exam. Neemtree's commitment to my success gave me the confidence I needed to excel. I can't thank them enough for their support.",
-    name: "Person Name 8",
-    role: "Role 8"
+    content: `"Neemtree's guidance and resources were instrumental in my IELTS success. Their personalized study plans, expert tutors, and realistic mock tests prepared me thoroughly for the actual exam. Neemtree's commitment to my success gave me the confidence I needed to excel. I can't thank them enough for their support."`,
+    name: "Raj Kapoor",
+    role: "Overall Band Score: 9.5"
   },
   {
-    content: "I am thrilled with the results I achieved in the IELTS, thanks to Neemtree. Their structured study plans, experienced tutors, and constant support were invaluable. Neemtree's personalized approach and commitment to their students set them apart. I wholeheartedly recommend their services to anyone aiming to study abroad.",
-    name: "Person Name 9",
-    role: "Role 9"
+    content: `"I am thrilled with the results I achieved in the IELTS, thanks to Neemtree. Their structured study plans, experienced tutors, and constant support were invaluable. Neemtree's personalized approach and commitment to their students set them apart. I wholeheartedly recommend their services to anyone aiming to study abroad."`,
+    name: "Carlos Mendoza",
+    role: "Overall Band Score: 8.0"
   },
   {
-    content: "Neemtree made my IELTS preparation a breeze. Their well-organized study materials and expert guidance helped me attain the scores necessary for my study abroad goals. Neemtree's dedication to student success shines through, and I couldn't be happier with the support they provided.",
-    name: "Person Name 10",
-    role: "Role 10"
+    content: `"Neemtree made my IELTS preparation a breeze. Their well-organized study materials and expert guidance helped me attain the scores necessary for my study abroad goals. Neemtree's dedication to student success shines through, and I couldn't be happier with the support they provided."`,
+    name: "Isabella Rodriguez",
+    role: "Overall Band Score: 8.5"
   },
 ];
 
