--- a/PTE.html
+++ b/PTE.html
@@ -600,54 +600,54 @@
     });
     const PTEtestimonials = [
   {
-    content: "Neemtree has been an incredible support on my journey to studying abroad. Their guidance and expert preparation resources for the PTE exam were exceptional. Thanks to their help, I achieved my target score, and I am now ready to pursue my dreams of studying overseas. I can't thank them enough!",
-    name: "Person Name 1",
-    role: "Role 1"
+    content: `"Neemtree has been an incredible support on my journey to studying abroad. Their guidance and expert preparation resources for the PTE exam were exceptional. Thanks to their help, I achieved my target score, and I am now ready to pursue my dreams of studying overseas. I can't thank them enough!"`,
+    name: "Azalea Stone",
+    role: "PTE Score:80"
   },
   {
-    content: "I am immensely grateful to Neemtree for their dedicated assistance with the PTE. Their personalized coaching and practice materials were instrumental in my success. Neemtree's commitment to helping students achieve their language proficiency goals is commendable.",
-    name: "Person Name 2",
-    role: "Role 2"
+    content: `"I am immensely grateful to Neemtree for their dedicated assistance with the PTE. Their personalized coaching and practice materials were instrumental in my success. Neemtree's commitment to helping students achieve their language proficiency goals is commendable."`,
+    name: "Lucian Shade",
+    role:"PTE Score:83"
   },
   {
-    content: "Neemtree Study Abroad Consultancy exceeded my expectations. Their PTE preparation program was tailored to my needs, and their experienced instructors made the learning process enjoyable and effective. I couldn't have asked for a better partner in achieving my study abroad ambitions.",
-    name: "Person Name 3",
-    role: "Role 3"
+    content: `"Neemtree Study Abroad Consultancy exceeded my expectations. Their PTE preparation program was tailored to my needs, and their experienced instructors made the learning process enjoyable and effective. I couldn't have asked for a better partner in achieving my study abroad ambitions."`,
+    name: "Leander Blackwell",
+    role: "PTE Score:87"
   },
   {
-    content: "I wholeheartedly recommend Neemtree for PTE preparation. Their comprehensive approach, attention to detail, and unwavering support ensured I was well-prepared for the PTE exam. With their guidance, I secured the score I needed for my academic journey abroad.",
-    name: "Person Name 4",
-    role: "Role 4"
+    content: `"I wholeheartedly recommend Neemtree for PTE preparation. Their comprehensive approach, attention to detail, and unwavering support ensured I was well-prepared for the PTE exam. With their guidance, I secured the score I needed for my academic journey abroad."`,
+    name: "Calista Hawks",
+    role: "PTE Score:88"
   },
   {
-    content: "Neemtree made my PTE exam preparation seamless and stress-free. Their individualized study plans, regular practice tests, and expert guidance were invaluable. Thanks to them, I am now one step closer to realizing my dream of studying overseas.",
-    name: "Person Name 5",
-    role: "Role 5"
+    content: `"Neemtree made my PTE exam preparation seamless and stress-free. Their individualized study plans, regular practice tests, and expert guidance were invaluable. Thanks to them, I am now one step closer to realizing my dream of studying overseas."`,
+    name: "Marlowe Winchester",
+    role: "PTE Score:81"
   },
   {
-    content: "Neemtree Study Abroad Consultancy provided exceptional guidance and support for my PTE exam preparation. Their experienced tutors and tailored study materials were instrumental in helping me achieve my desired score. I am grateful for their expertise and encouragement throughout my journey to study abroad.",
-    name: "John Thompson",
-    role: "Role 5"
+    content: `"Neemtree Study Abroad Consultancy provided exceptional guidance and support for my PTE exam preparation. Their experienced tutors and tailored study materials were instrumental in helping me achieve my desired score. I am grateful for their expertise and encouragement throughout my journey to study abroad."`,
+    name: "Rowen Flair",
+    role: "PTE Score:80"
   },
   {
-    content: "I can't thank Neemtree enough for their outstanding PTE coaching. Their structured approach, focused practice sessions, and realistic mock tests made all the difference. The individual attention I received ensured I was well-prepared, leading to my success in the exam. Neemtree truly stands out in guiding students toward their international education goals.",
-    name: "Sarah Patel",
-    role: "Role 5"
+    content: `"I can't thank Neemtree enough for their outstanding PTE coaching. Their structured approach, focused practice sessions, and realistic mock tests made all the difference. The individual attention I received ensured I was well-prepared, leading to my success in the exam. Neemtree truly stands out in guiding students toward their international education goals."`,
+    name: "Liam Scott",
+    role: "PTE Score:89"
   },
   {
-    content: "Neemtree's PTE preparation program is top-notch. The instructors are not only knowledgeable but also incredibly supportive. Their insightful feedback and personalized strategies honed my skills, enabling me to excel in the exam. I highly recommend Neemtree to anyone aspiring to study abroad; their commitment to students' success is unparalleled.",
-    name: "Rajesh Kumar",
-    role: "Role 5"
+    content: `"Neemtree's PTE preparation program is top-notch. The instructors are not only knowledgeable but also incredibly supportive. Their insightful feedback and personalized strategies honed my skills, enabling me to excel in the exam. I highly recommend Neemtree to anyone aspiring to study abroad; their commitment to students' success is unparalleled."`,
+    name: "Owen Parker",
+    role: "PTE Score:82"
   },
   {
-    content: "Choosing Neemtree for my PTE preparation was a game-changer. The comprehensive study materials, combined with the expertise of their tutors, created a conducive learning environment. Thanks to their guidance, I confidently approached the PTE exam and achieved the scores I needed for my overseas education. Neemtree's dedication to student progress is truly commendable.",
-    name: "Emily Rodriguez",
-    role: "Role 5"
+    content: `"Choosing Neemtree for my PTE preparation was a game-changer. The comprehensive study materials, combined with the expertise of their tutors, created a conducive learning environment. Thanks to their guidance, I confidently approached the PTE exam and achieved the scores I needed for my overseas education. Neemtree's dedication to student progress is truly commendable."`,
+    name: "Max Bennett",
+    role: "PTE Score:84"
   },
   {
-    content: "Neemtree Study Abroad Consultancy exceeded my expectations in PTE coaching. Their team's proficiency, encouragement, and structured approach significantly boosted my confidence. The personalized attention I received addressed my specific areas of improvement, ensuring my success in the exam. Neemtree's unwavering support made my dream of studying abroad a reality.",
-    name: "Emily Rodriguez",
-    role: "Role 5"
+    content: `"Neemtree Study Abroad Consultancy exceeded my expectations in PTE coaching. Their team's proficiency, encouragement, and structured approach significantly boosted my confidence. The personalized attention I received addressed my specific areas of improvement, ensuring my success in the exam. Neemtree's unwavering support made my dream of studying abroad a reality."`,
+    name: "Mia Johnson",
+    role: "PTE Score:87"
   },
 ];
 
