--- a/SAT.html
+++ b/SAT.html
@@ -539,27 +539,27 @@
 //testimonial carousel
 const SATtestimonials = [
   {
-    content: "I cannot thank Neemtree enough for their exceptional SAT coaching. The personalized attention and insightful strategies they provided were instrumental in my success. The experienced faculty and comprehensive study materials truly prepared me for the exam. I highly recommend Neemtree to anyone aiming for a top score in the SAT.",
+    content: `"I cannot thank Neemtree enough for their exceptional SAT coaching. The personalized attention and insightful strategies they provided were instrumental in my success. The experienced faculty and comprehensive study materials truly prepared me for the exam. I highly recommend Neemtree to anyone aiming for a top score in the SAT."`,
     name: "Sarah Thompson",
     role: "SAT Score: 1530 "
   },
   {
-    content: "Neemtree's SAT coaching program is unparalleled. Their dedicated instructors not only improved my skills but also boosted my confidence. The mock tests and one-on-one tutoring sessions were invaluable. Thanks to Neemtree's guidance, I achieved my dream SAT score, opening doors to the best universities. I am grateful for their support.",
+    content: `"Neemtree's SAT coaching program is unparalleled. Their dedicated instructors not only improved my skills but also boosted my confidence. The mock tests and one-on-one tutoring sessions were invaluable. Thanks to Neemtree's guidance, I achieved my dream SAT score, opening doors to the best universities. I am grateful for their support."`,
     name: "Amit Patel",
     role: "SAT Score: 1600"
   },
   {
-    content: "Neemtree made my SAT preparation journey seamless. Their structured study plans, challenging practice tests, and expert guidance honed my abilities. The consultancy's assistance with college applications and visa processes made the entire process stress-free. Neemtree truly cares about their students' success, and it shows in their results.",
+    content: `"Neemtree made my SAT preparation journey seamless. Their structured study plans, challenging practice tests, and expert guidance honed my abilities. The consultancy's assistance with college applications and visa processes made the entire process stress-free. Neemtree truly cares about their students' success, and it shows in their results."`,
     name: "Emily Johnson",
     role: "SAT Score: 1480"
   },
   {
-    content: "Neemtree exceeded my expectations in SAT coaching. Their tutors are not only knowledgeable but also incredibly supportive. The emphasis on understanding concepts and personalized study materials made a significant difference in my performance. Neemtree's holistic approach prepared me not just for the SAT, but also for a successful academic journey abroad.",
+    content: `"Neemtree exceeded my expectations in SAT coaching. Their tutors are not only knowledgeable but also incredibly supportive. The emphasis on understanding concepts and personalized study materials made a significant difference in my performance. Neemtree's holistic approach prepared me not just for the SAT, but also for a successful academic journey abroad."`,
     name: "Rajesh Mishra",
     role: "SAT Score: 1550"
   },
   {
-    content: "Choosing Neemtree for my SAT preparation was the best decision I made. Their expert tutors transformed my weaknesses into strengths. The consultancy's guidance didn’t just stop at exam preparation; they assisted me with every aspect of my application process, ensuring I had a competitive edge. I am now studying at my dream university, all thanks to Neemtree.",
+    content: `"Choosing Neemtree for my SAT preparation was the best decision I made. Their expert tutors transformed my weaknesses into strengths. The consultancy's guidance didn’t just stop at exam preparation; they assisted me with every aspect of my application process, ensuring I had a competitive edge. I am now studying at my dream university, all thanks to Neemtree."`,
     name: "Lila Gupta",
     role: "SAT Score: 1470"
   },
