--- a/TOEFL.html
+++ b/TOEFL.html
@@ -601,54 +601,54 @@
     });
     const TOEFLtestimonials = [
   {
-    content: "Thanks to Neemtree, I aced my TOEFL exam and secured admission to my dream university abroad. Their expert guidance and comprehensive TOEFL preparation resources were invaluable in my journey to studying overseas.",
-    name: "Person Name 1",
-    role: "Role 1"
+    content: `"Thanks to Neemtree, I aced my TOEFL exam and secured admission to my dream university abroad. Their expert guidance and comprehensive TOEFL preparation resources were invaluable in my journey to studying overseas."`,
+    name: "Jamal Ahmed",
+    role: "TOEFL Score: 112"
   },
   {
-    content: "Neemtree provided me with personalized TOEFL preparation that greatly improved my English skills. Their experienced counselors and top-notch study materials made all the difference in my study abroad application process.",
-    name: "Person Name 2",
-    role: "Role 2"
+    content: `"Neemtree provided me with personalized TOEFL preparation that greatly improved my English skills. Their experienced counselors and top-notch study materials made all the difference in my study abroad application process."`,
+    name: "Aarav Patel",
+    role: "TOEFL Score: 110"
   },
   {
-    content: "Neemtree's TOEFL guidance was instrumental in my success. Their supportive team and well-structured study plans helped me achieve my desired TOEFL score, enabling me to pursue higher education abroad.",
-    name: "Person Name 3",
-    role: "Role 3"
+    content: `"Neemtree's TOEFL guidance was instrumental in my success. Their supportive team and well-structured study plans helped me achieve my desired TOEFL score, enabling me to pursue higher education abroad."`,
+    name: "Ivan Petrov",
+    role: "TOEFL Score: 105"
   },
   {
-    content: "I can't thank Neemtree enough for their TOEFL assistance. Their TOEFL coaching not only boosted my English proficiency but also boosted my confidence to perform well on the test. I am now well on my way to realizing my academic aspirations abroad.",
-    name: "Person Name 4",
-    role: "Role 4"
+    content: `"I can't thank Neemtree enough for their TOEFL assistance. Their TOEFL coaching not only boosted my English proficiency but also boosted my confidence to perform well on the test. I am now well on my way to realizing my academic aspirations abroad."`,
+    name: "Ali Khan",
+    role: "TOEFL Score: 100"
   },
   {
-    content: "Choosing Neemtree for TOEFL preparation was one of the best decisions I made. Their TOEFL resources, practice tests, and expert guidance ensured that I surpassed the required score for my university application. I highly recommend Neemtree to anyone aspiring to study abroad.",
-    name: "Person Name 5",
-    role: "Role 5"
+    content: `"Choosing Neemtree for TOEFL preparation was one of the best decisions I made. Their TOEFL resources, practice tests, and expert guidance ensured that I surpassed the required score for my university application. I highly recommend Neemtree to anyone aspiring to study abroad."`,
+    name: "Naina Sharma",
+    role: "TOEFL Score: 108"
   },
   {
-    content: "Thanks to Neemtree, my TOEFL journey was smooth and successful. Their expert guidance and tailored TOEFL preparation materials significantly boosted my confidence. The personalized attention I received made all the difference. I scored exceptionally well, opening the doors to my dream university. Neemtree truly knows the recipe for TOEFL success!",
+    content: `"Thanks to Neemtree, my TOEFL journey was smooth and successful. Their expert guidance and tailored TOEFL preparation materials significantly boosted my confidence. The personalized attention I received made all the difference. I scored exceptionally well, opening the doors to my dream university. Neemtree truly knows the recipe for TOEFL success!"`,
     name: "John Thompson",
-    role: "Role 5"
+    role: "TOEFL Score: 115"
   },
   {
-    content: "Neemtree Consultancy played a pivotal role in my TOEFL preparation. Their experienced tutors guided me through every aspect of the test, ensuring I was well-prepared and confident on exam day. The study materials provided were comprehensive, and the mock tests were incredibly helpful. I highly recommend Neemtree to anyone aiming for a top TOEFL score.",
+    content: `"Neemtree Consultancy played a pivotal role in my TOEFL preparation. Their experienced tutors guided me through every aspect of the test, ensuring I was well-prepared and confident on exam day. The study materials provided were comprehensive, and the mock tests were incredibly helpful. I highly recommend Neemtree to anyone aiming for a top TOEFL score."`,
     name: "Sarah Patel",
-    role: "Role 5"
+    role: "TOEFL Score: 103"
   },
   {
-    content: "I cannot thank Neemtree enough for their outstanding TOEFL coaching. Their team's dedication and expertise are unmatched. The strategies they taught me were invaluable, helping me tackle even the trickiest TOEFL questions with ease. Neemtree transformed what seemed like a daunting task into a manageable and successful experience. I am now on my way to my dream university, all thanks to them!",
+    content: `"I cannot thank Neemtree enough for their outstanding TOEFL coaching. Their team's dedication and expertise are unmatched. The strategies they taught me were invaluable, helping me tackle even the trickiest TOEFL questions with ease. Neemtree transformed what seemed like a daunting task into a manageable and successful experience. I am now on my way to my dream university, all thanks to them!"`,
     name: "Rajesh Kumar",
-    role: "Role 5"
+    role: "TOEFL Score: 118"
   },
   {
-    content: "Choosing Neemtree for my TOEFL preparation was the best decision I made. Their tutors are not only knowledgeable but also incredibly supportive. They understood my strengths and weaknesses, providing targeted guidance that ultimately led to my excellent TOEFL score. Neemtree's genuine commitment to student success sets them apart. I am grateful for their unwavering support throughout my TOEFL journey.",
+    content: `"Choosing Neemtree for my TOEFL preparation was the best decision I made. Their tutors are not only knowledgeable but also incredibly supportive. They understood my strengths and weaknesses, providing targeted guidance that ultimately led to my excellent TOEFL score. Neemtree's genuine commitment to student success sets them apart. I am grateful for their unwavering support throughout my TOEFL journey."`,
     name: "Emily Rodriguez",
-    role: "Role 5"
+    role: "TOEFL Score: 114"
   },
   {
-    content: "Neemtree Study Abroad Consultancy turned my TOEFL preparation into a smooth journey. The personalized attention, practice tests, and expert advice were invaluable. I can't thank them enough for helping me fulfill my dream of studying abroad.",
-    name: "Emily Rodriguez",
-    role: "Role 5"
+    content: `"Neemtree Study Abroad Consultancy turned my TOEFL preparation into a smooth journey. The personalized attention, practice tests, and expert advice were invaluable. I can't thank them enough for helping me fulfill my dream of studying abroad."`,
+    name: "Jessica Miller",
+    role: "TOEFL Score: 110"
   },
 ];
 
