--- a/index.html
+++ b/index.html
@@ -555,8 +555,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Lucas Smith</strong><br>
+                      Digital Artist, Concept Creator
                         </p>
                       </div>
                     </div>
@@ -572,8 +572,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Anna Johnson</strong><br>
+                      Public Speaker, Leadership Coach
                           </p>
                         </div>
                  </div>
@@ -595,8 +595,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>David Williams</strong><br>
+                      Science Researcher, Innovator
                         </p>
                       </div>
                     </div>
@@ -615,8 +615,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                          <strong>Grace Thompson</strong><br>
+                      Medical Intern, Aspiring Surgeon
                         </p>
                       </div>
                     </div>
@@ -633,8 +633,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Evelyn Martinez</strong><br>
+                      Data Analyst, Tech Enthusiast
                         </p>
                       </div>
                     </div>
@@ -656,8 +656,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Noah Garcia</strong><br>
+                      Environmental Activist, Advocate
                         </p>
                       </div>
                     </div>
@@ -676,8 +676,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Isabella Rodriguez</strong><br>
+    Financial Analyst, Investment Advisor
                         </p>
                       </div>
                     </div>
@@ -694,8 +694,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Ethan Wilson</strong><br>
+    Architect, Urban Development Specialist
                           </p>
                         </div>
                     </div>
@@ -716,8 +716,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Mia Anderson</strong><br>
+    Creative Director, Brand Strategist
                           </p>
                         </div>
                     </div>
@@ -736,8 +736,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Alexander Thompson</strong><br>
+    Software Developer, AI Enthusiast
                         </p>
                       </div>
                     </div>
@@ -755,8 +755,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Matthew Peterson</strong><br>
+    Neuroscientist, Cognitive Researcher
                           </p>
                         </div>
                         </div>
@@ -777,8 +777,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Lucas Lee</strong><br>
+    Quantum Physicist, Researcher
                           </p>
                         </div>
                     </div>
@@ -796,8 +796,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Ava Lopez</strong><br>
+    Corporate Lawyer, Legal Consultant
                         </p>
                       </div>
                     </div>
@@ -815,8 +815,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Nathan Davis</strong><br>
+    Renewable Energy Specialist, Environmentalist
                           </p>
                         </div>
                       </div>
@@ -836,8 +836,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Samantha Brown</strong><br>
+    Clinical Psychologist, Mental Health Advocate
                           </p>
                         </div>
                     </div>
@@ -856,8 +856,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Gabriel White</strong><br>
+    Urban Planner, Sustainable Design Advocate
                         </p>
                       </div>
                     </div>
@@ -875,8 +875,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Sophie Martinez</strong><br>
+    Art Historian, Museum Curator
                           </p>
                         </div>
                       </div>
@@ -897,8 +897,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Jackson Taylor</strong><br>
+    Robotics Technician, Innovator
                           </p>
                         </div>
                     </div>
@@ -916,8 +916,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Lily Roberts</strong><br>
+    Documentary Filmmaker, Storyteller
                         </p>
                       </div>
                     </div>
@@ -935,8 +935,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Daniel Hernandez</strong><br>
+    Cybersecurity Expert, Ethical Hacker
                           </p>
                         </div>
                       </div>
@@ -957,8 +957,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Victoria Clark</strong><br>
+    Aerospace Engineer, Pilot
                           </p>
                         </div>
                     </div>
@@ -977,8 +977,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Amelia Lee</strong><br>
+    Journalist, Media Correspondent
                         </p>
                       </div>
                     </div>
@@ -997,8 +997,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>William Hernandez</strong><br>
+    Financial Planner, Wealth Management Advisor
                           </p>
                         </div>
                       </div>
@@ -1020,8 +1020,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Mia Wong</strong><br>
+    Culinary Chef, Restaurant Owner
                           </p>
                         </div>
                     </div>
@@ -1040,8 +1040,8 @@
                       <div class="testimonial-author">
                         <img src="assets/emily.svg" alt="Emily Stones">
                         <p class="author-info">
-                          <strong>Emily Stones</strong><br>
-                          CEO, Marketing Guru
+                        <strong>Anthony Rivera</strong><br>
+    Mobile App Developer, Entrepreneur
                         </p>
                       </div>
                     </div>
@@ -1060,8 +1060,8 @@
                         <div class="testimonial-author">
                           <img src="assets/emily.svg" alt="Emily Stones">
                           <p class="author-info">
-                            <strong>Emily Stones</strong><br>
-                            CEO, Marketing Guru
+                          <strong>Carter Brooks</strong><br>
+    Environmental Lawyer, Policy Maker
                           </p>
                         </div>
                       </div>
